<resources>
    <string name="app_name">Tea Time</string>
    <string name="hint_email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="have_a_code">Already Have A Code?</string>
    <string name="nav_back">Back</string>
    <string name="enter_email">Enter Email</string>
    <string name="field_instruct">Please Enter Your Email Below</string>
    <string name="reset_password">Reset Password</string>
    <string name="password_confirm">Confirm</string>
    <string name="new_password_text">Enter Your New Password Below</string>
    <string name="hint_last">Last Name</string>
    <string name="hint_first">First Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_again">Retype Password</string>
    <string name="action_register_short">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="style_change">Change Style</string>
    <string name="black_yellow">Black and Yellow</string>
    <string name="uw_colors">Go Huskies xD</string>
    <string name="apply_settings">Apply</string>
    <string name="title_settings">Settings</string>
    <string name="button_text">Change Theme</string>
    <string name="theme_change">Theme Options</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_new_chat_fragment">Create New Chat</string>
    <string name="title_home">Home</string>
    <string name="title_contact">Contacts</string>
    <string name="title_newContact">Add Contact</string>
    <string name="title_newChat">Create Chat</string>
    <string name="title_chat">Chat</string>
    <string name="title_weather">Weather</string>
    <string name="test_home">Home</string>
    <string name="test_contact">Contact</string>
    <string name="test_chat">chat</string>
    <string name="test_weather">weather</string>
    <string name="title_incoming_contact">Incoming Contact Requests</string>
    <string name="title_email_search">Enter Email to Search Contact</string>
    <string name="button_email_search">Search</string>
    <string name="title_no_contact">Please Enter Valid Email!</string>
    <string name="title_add_to_chat">Add Users to Chat:</string>
    <string name="weather_map">Weather Map</string>

    <string name="weather_temp">56°F</string>
    <string name="weather_temp_text">Temperature</string>
    <string name="weather_feelsLike">45°F</string>
    <string name="weather_feelsLike_text">Feels Like</string>
    <string name="weather_display_mainHeader">Location</string>
    <string name="weather_condition_text">Windy as heck</string>
    <string name="weather_condition_icon">8010</string>
    <string name="weather_search_iconDescription">weather_search_icon</string>
    <string name="weather_7dayRV">weather_7dayRV</string>
    <string name="weather_pressure">Pressure 1050</string>
    <string name="weather_humidity">Humidity 32</string>
    <string name="weather_humidity_text">Humidity</string>
    <string name="weather_RV_header">24 Hour Forecast</string>
    <string name="weather_7Day">weather_locationSearch</string>
    <string name="weather_location_search">Enter City, State</string>
    <string name="weather_contentDescription">Weather Icon to display</string>
    <string name="weather_card_time">12:00 am</string>
    <string name="weather_card_temp">45°F</string>
    <string name="weather_card_wind">15 m/h</string>
    <string name="weather_switch_onOffText">Switch to weekly</string>
    <string name="switch_sign_in">Stay Signed in</string>
    <string name="keys_shared_prefs">My Auth App Shared Prefs</string>
    <string name="keys_prefs_jwt">Sharded Prefs JWT</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="send_message">Message</string>

    <string name="button_create_chat">Create Chat</string>
    <string name="title_select_contacts">Select Contacts:</string>
    <string name="title_name_chat">Enter Chat Name</string>

    <string name="title_activity_maps">Select Location</string>

    <string name="base_url">https://mobile-application-project-450.herokuapp.com/</string>
    <string name="action_settings">Settings</string>

</resources>