<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/navigation_home">


    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.uw.tcss450.group7.chatapp.ui.home.Fragment_Home"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_navigation_home_to_navigation_settings"
            app:destination="@id/navigation_settings" />

    </fragment>

    <fragment
        android:id="@+id/navigation_contact"
        android:name="edu.uw.tcss450.group7.chatapp.ui.contact.Fragment_contact"
        android:label="@string/title_contact"
        tools:layout="@layout/fragment_contact" />
    <fragment
        android:id="@+id/navigation_chat"
        android:name="edu.uw.tcss450.group7.chatapp.ui.chat.Fragment_chat"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/navigation_weather"
        android:name="edu.uw.tcss450.group7.chatapp.ui.weather.Fragment_weather"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="edu.uw.tcss450.group7.chatapp.settings.Settings"
        android:label="fragment_settings"
        tools:layout="@layout/fragment_settings" />



</navigation>

