<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.signin.PasswordFragment">

    <TextView
        android:id="@+id/instruction_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/field_instruct"
        android:layout_marginBottom="20dp"
        android:textSize="25dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/username_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/username_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="12dp"
        android:textSize="12dp"
        app:layout_constraintTop_toBottomOf="@id/username_reset"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_back"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:textSize="12dp"
        app:layout_constraintTop_toBottomOf="@id/username_reset"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>