<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="165dp"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        app:cardElevation="5dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="157dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/weather_card_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_card_wind"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weather_card_icon" />

            <ImageView
                android:id="@+id/weather_card_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weather_card_time"
                app:srcCompat="@drawable/ic_weather_white_24dp" />

            <TextView
                android:id="@+id/weather_card_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/weather_card_temp"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/weather_card_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weather_card_time"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/weather_card_temp"
                tools:layout_editor_absoluteX="16dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>