<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.chat.chatlist.NewChatListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_wait"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/chat_name_field"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:hint="@string/title_name_chat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_enter_chat_name"
                android:layout_width="match_parent"
                android:layout_height="58dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/linearProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintTop_toBottomOf="@+id/chat_name_field"
            tools:layout_editor_absoluteX="4dp" />

        <Button
            android:id="@+id/button_create_chat"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_create_chat"
            app:layout_constraintBottom_toBottomOf="@+id/chat_name_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.777"
            app:layout_constraintStart_toEndOf="@+id/chat_name_field"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.666" />

        <TextView
            android:id="@+id/text_select_contacts"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="4dp"
            android:padding="8dp"
            android:text="@string/title_select_contacts"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chat_name_field" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_root"
            android:name="edu.uw.tcss450.group7.chatapp.ui.chat.chatlist.NewChatListFragment"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:orientation="vertical"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_select_contacts"
            tools:context="edu.uw.tcss450.group7.chatapp.ui.chat.chatlist.NewChatListFragment"
            tools:listitem="@layout/new_chat_add_contact_card" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>